[tool.poetry]
name = "controlpi"
version = "0.1.0"
description = ""
authors = ["Massimo Biagioli <biagiolimassimo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
isort = "^5.12.0"
black = "^23.3.0"
bandit = "^1.7.5"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
